tests/baselines/reference/unknownTypeArgOnCall.errors.txt
unknownTypeArgOnCall.ts(7,17): error TS2304: Cannot find name 'Uhhhh'.


==== unknownTypeArgOnCall.ts (1 errors) ====
    class Foo<T> {
      public clone<U>() {
       return null;
       }
    }
    var f = new Foo<number>();
    var r = f.clone<Uhhhh>()
                    ~~~~~
!!! error TS2304: Cannot find name 'Uhhhh'.
    